SIGN UP - Choose default currency + ACTIVATION page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h2>{{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <span style="font-style: italic;">My Money Tracker</span>
+  <h2>{{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <span style="font-style: italic;">The Accountant</span>
     <span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!</h2>
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
@@ -15,35 +15,35 @@
   <img ng-if="!shouldShowGraphicPreview" src="images/preview_statistics.PNG" style="width:100%" alt="I'm Yeoman">
   <br>
   <br><br>
-  <h3 style="font-weight: bold;">What <span style="font-style: italic;">MyMoneyTracker</span> does ?</h3>
+  <h3 style="font-weight: bold;">What <span style="font-style: italic;">The Accountant</span> does ?</h3>
   <div>
       <ul style="text-align:left;font-size:18px;">
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you to keep your budget under control.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> can calculate how much you've spent monthly,
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you to keep your budget under control.</li>
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> can calculate how much you've spent monthly,
           grouping your expenses by categories or by date.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> helps you establish monthly thresholds for expenses
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you establish monthly thresholds for expenses
           grouped by different categories.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> is free and easy to use.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> offers the possibility to manage your expenses by
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> is free and easy to use.</li>
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> offers the possibility to manage your expenses by
           creating an account that can be used to login into the application everywhere you are, without installing any other
           application.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> offers a secure connection based on HTTPS protocol.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> encrypts any information for a user, and only the
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> offers a secure connection based on HTTPS protocol.</li>
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> encrypts any information for a user, and only the
             user that have created the information has acces to it.</li>
       </ul>
 
       <ul ng-if="!isEng()" style="text-align:left;font-size:18px;">
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> te ajuta sa tii bugetul personal sub control.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> poate calcula cat ai cheltuit lunar,
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te ajuta sa tii bugetul personal sub control.</li>
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> poate calcula cat ai cheltuit lunar,
           grupand cheltuielile in functie de categorie sau de data.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> te poate ajuta sa iti stabilesti limite lunare pentru
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te poate ajuta sa iti stabilesti limite lunare pentru
           cheltuielile grupate pe categorii diferite.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> este gratuit si usor de folosit.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> ofera posibilitatea managementului chaltuielilor
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> este gratuit si usor de folosit.</li>
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> ofera posibilitatea managementului chaltuielilor
           prin crearea unui cont care poate fi folosit pentru logarea in aplicatie de oriunde ,
           fara necesitatea instalarii unei alte aplicatii.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> ofera o conexiune sigura prin intermediul protocolului HTTPS.</li>
-        <li><span style="font-weight: bold;font-style: italic;">MyMoneyTracker</span> cripteaza toate informatiile introduse de utlizator, si doar
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> ofera o conexiune sigura prin intermediul protocolului HTTPS.</li>
+        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> cripteaza toate informatiile introduse de utlizator, si doar
           utilizatorul care a introdus informatia va avea acces.</li>
       </ul>
     </div>
