--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -26,6 +26,14 @@
       </div>
     </div>
     <div class="form-group">
+      <label class="control-label col-sm-2" for="DefaultCurrency">Default currency<span style="color:#ff3333;">*</span> :</label>
+      <div class="col-sm-10">
+        <select type="date" class="form-control" id="DefaultCurrency" placeholder="Default Currency ..." ng-model="user.defaultCurrency" required>
+          <option ng-repeat="currency in availableCurrencies" value="{{currency}}">{{currency}}</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
       <label class="control-label col-sm-2" for="firstName">First name:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="firstName" placeholder="First name" ng-model="user.firstName">
