--- a/app/views/expense/expenses_history.html
+++ b/app/views/expense/expenses_history.html
@@ -24,7 +24,7 @@
         <span class="glyphicon glyphicon-question-sign control-icon-blue" bs-tooltip title="Use colours for categories" ng-click="useColoursForCategories()"></span>
       </th>
       <th>Date
-        <span class="glyphicon glyphicon-sort" bs-tooltip title="Sort by date" ng-click="changeSortingCriteria('creationDate')"></span>
+        <span class="glyphicon glyphicon-sor control-icon-blue" bs-tooltip title="Sort by date" ng-click="changeSortingCriteria('creationDate')"></span>
       </th>
       <th></th>
     </tr>
