--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -120,6 +120,7 @@ body {
     cursor: hand;
     font-size: 18px;
     color: red;
+    margin: 3px;
   }
 
   .control-icon-green {
@@ -127,6 +128,7 @@ body {
     cursor: hand;
     font-size: 18px;
     color: green;
+    margin: 3px;
   }
 
   .control-icon-blue {
@@ -134,5 +136,6 @@ body {
     cursor: hand;
     font-size: 18px;
     color: #0066ff;
+    margin: 3px;
   }
 }
