Fix logo.svg + EDIT EXPENSE + get Incomes/Expenses in default currecncy

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
     <br>
-    <p ng-if="isEng()">Always a pleasure offering you the best and easy to use expense manager.</p>
+    <p ng-if="isEng()">Always a pleasure to offer the best and easiest way to use an expense manager.</p>
     <p ng-if="!isEng()">Mereu o placere in oferirea celei mai placute si usor de folosit aplicatii de management financiar.</p>
   </p>
   <p><a class="btn btn-lg btn-success" ng-init="shouldShowGraphicPreview = true"
@@ -21,8 +21,8 @@
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you to keep your budget under control.</li>
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> can calculate how much you've spent monthly,
           grouping your expenses by categories or by date.</li>
-        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you establish monthly thresholds for expenses
-          grouped by different categories.</li>
+        <!--<li><span style="font-weight: bold;font-style: italic;">The Accountant</span> helps you establish monthly thresholds for expenses
+          grouped by different categories.</li>-->
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> is free and easy to use.</li>
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> offers the possibility to manage your expenses by
           creating an account that can be used to login into the application everywhere you are, without installing any other
@@ -36,8 +36,8 @@
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te ajuta sa tii bugetul personal sub control.</li>
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> poate calcula cat ai cheltuit lunar,
           grupand cheltuielile in functie de categorie sau de data.</li>
-        <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te poate ajuta sa iti stabilesti limite lunare pentru
-          cheltuielile grupate pe categorii diferite.</li>
+        <!--<li><span style="font-weight: bold;font-style: italic;">The Accountant</span> te poate ajuta sa iti stabilesti limite lunare pentru
+          cheltuielile grupate pe categorii diferite.</li>-->
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> este gratuit si usor de folosit.</li>
         <li><span style="font-weight: bold;font-style: italic;">The Accountant</span> ofera posibilitatea managementului chaltuielilor
           prin crearea unui cont care poate fi folosit pentru logarea in aplicatie de oriunde ,
