--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,7 @@
 <div class="jumbotron">
-  <h2>{{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <span style="font-style: italic;">The Accountant</span>
-    <span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!</h2>
+  <h2>
+    {{isEng() ? 'Welcome to':'Bine ai venit in aplicatia'}} <span style="font-style: italic;">The Accountant</span><span ng-show="username">, <span style="color:#ff3333;">{{username}}</span></span>!
+  </h2>
   <p class="lead">
     <img src="images/logo.svg" alt="I'm Yeoman"><br>
     <br>
