--- a/app/views/expense/expense_categories.html
+++ b/app/views/expense/expense_categories.html
@@ -34,7 +34,7 @@
 <br>
 <div>
   <table class="table table-bordered table-hover" ng-show="loading == false">
-    <thead>
+    <thead class="grey-bg">
     <tr>
       <th>Category Name</th>
       <!--<th>Colour Name</th>-->
