--- a/app/views/expense/expenses_history.html
+++ b/app/views/expense/expenses_history.html
@@ -13,7 +13,9 @@
     <input type="date" ng-model="expenseUntilDate" ng-change="retrieveExpenseList()">
   </label>
   <div class="col-sm-4">
-    <button type="button" class="btn btn-block accountant-btn" ng-click="addExpenseAttempt()">Add new expense</button>
+    <button type="button" class="btn btn-block accountant-btn" ng-click="addExpenseAttempt()">
+      <span class="glyphicon glyphicon-plus"></span> Add new expense
+    </button>
   </div>
 </div>
 <br>
