--- a/app/views/income/incomes_history.html
+++ b/app/views/income/incomes_history.html
@@ -13,7 +13,9 @@
     <input type="date" ng-model="incomeUntilDate" ng-change="retrieveIncomeList()">
   </label>
   <div class="col-sm-4">
-    <button type="button" class="btn btn-block accountant-btn" ng-click="addIncomeAttempt()">Add new income</button>
+    <button type="button" class="btn btn-block accountant-btn" ng-click="addIncomeAttempt()">
+      <span class="glyphicon glyphicon-plus"></span> Add new income
+    </button>
   </div>
 </div>
 <br>
