--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -159,3 +159,10 @@ body {
 .dropdown-toggle {
   width: 100% !important;
 }
+
+.warn-chart-label {
+  width: 100%;
+  text-align:center;
+  font-style: italic;
+  font-size: 18px;
+}
