--- a/app/views/expense/add_expense.html
+++ b/app/views/expense/add_expense.html
@@ -48,7 +48,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Add expense</button>
+        <button type="submit" class="btn btn-default submit-btn"><span class="glyphicon glyphicon-plus"></span> Add expense</button>
       </div>
     </div>
   </form>
