--- a/app/views/expense/expenses_chart.html
+++ b/app/views/expense/expenses_chart.html
@@ -4,22 +4,21 @@
   <div class="form-group">
     <label class="control-label col-sm-3">Graphic type:</label>
     <div class="col-sm-8">
-      <select type="date" class="form-control" id="graphic" placeholder="Category" ng-model="graphic_type" required>
+      <select type="date" class="form-control" id="graphic" placeholder="Category" ng-model="graphic_type"
+              ng-change="onGraphicChange(graphic_type, selected_year);" required>
         <option ng-repeat="graphic in graphics" value="{{graphic}}" required>{{graphic}}</option>
       </select>
     </div>
   </div>
   <br>
-  <br>
 </div>
-<br>
 
-<div id="graphic_container">
+<div id="graphic_container" style="margin-top:30px;">
 
   <div ng-show="loading == false">
     <div id="selection_area" class="form-group">
 
-      <div ng-if="graphic_type.indexOf('LINEAR') === -1 && graphic_type.indexOf('BAR') === -1 && graphic_type != 'DYNAMIC'">
+      <div ng-if="graphic_type.indexOf('LINEAR') === -1 && graphic_type.indexOf('BAR') === -1 && graphic_type.indexOf('DYNAMIC') === -1">
         <label class="control-label col-sm-2">Change year:</label>
         <div class="col-sm-3">
           <select type="date" class="form-control" id="year_select" placeholder="year" ng-model="selected_year"
@@ -27,12 +26,14 @@
             <option ng-repeat="year in yearsArray" value="{{year}}" required>{{year}}</option>
           </select>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-1">
           <span class="glyphicon glyphicon-info-sign" bs-tooltip title="Expenses are presented in your default currency: {{default_currency}}"></span>
         </div>
       </div>
 
-      <div ng-show="graphic_type.indexOf('LINEAR') > -1 || graphic_type.indexOf('BAR') > -1 || graphic_type == 'DYNAMIC'">
+      <div ng-show="graphic_type.indexOf('LINEAR') > -1 || graphic_type.indexOf('BAR') > -1 || graphic_type.indexOf('DYNAMIC') > -1">
         <label class="col-sm-4">
           <span class="input-label">From: </span>
           <input type="date" ng-model="expenseFromDate" ng-change="onDateSelect()">
@@ -46,15 +47,26 @@
         </div>
       </div>
 
-      <div class="col-sm-3">
-        <input type="button" ng-if="!show_categories_legend" class="form-control" value="Show categories legend"
-               ng-click="toggleLegendShow()">
-        <input type="button" ng-if="show_categories_legend" class="form-control" value="Hide categories legend"
-               ng-click="toggleLegendShow()">
+      <div class="col-sm-3" ng-if="graphic_type.indexOf('DYNAMIC') === -1">
+        <button ng-if="!show_categories_legend" type="button" class="btn btn-default" ng-click="toggleLegendShow()" style="width:100%">
+          <span class="glyphicon glyphicon-retweet"></span> Show categories legend
+        </button>
+        <button ng-if="show_categories_legend" type="button" class="btn btn-default" ng-click="toggleLegendShow()" style="width:100%">
+          <span class="glyphicon glyphicon-retweet"></span> Hide categories legend
+        </button>
+      </div>
+      <div class="col-sm-3" ng-if="graphic_type.indexOf('DYNAMIC') > -1">
+        <button type="button" class="btn btn-default" ng-click="toggleDynamicGraphic()" style="width:100%">
+          <span class="glyphicon glyphicon-retweet"></span> Toggle graphic type
+        </button>
       </div>
     </div>
-    <div ng-show="graphic_type == 'PIE' || graphic_type == 'DYNAMIC'" id="selection_area2" class="form-group">
-      <label class="control-label col-sm-2">Change month:</label>
+
+    <div ng-show="graphic_type.indexOf('PIE') > -1" class="form-group">
+      <br/><br/>
+      <div class="col-sm-2">
+        <label class="control-label">Change month:</label>
+      </div>
       <div class="col-sm-3">
         <select type="date" class="form-control" id="month_select" placeholder="month" ng-model="selected_month"
                 ng-change="onPeriodSelect(false)">
@@ -62,14 +74,14 @@
         </select>
       </div>
       <div class="col-sm-4"></div>
-      <div class="col-sm-3">
-        <input  ng-show="graphic_type == 'DYNAMIC'" type="button" class="form-control" value="Toggle graphic type"
-               ng-click="toggleDynamicGraphic()">
-      </div>
+      <div class="col-sm-3"></div>
+      <br/><br/>
     </div>
     <br/>
-    <br/>
     <div id="linear_chart" ng-if="graphic_type.indexOf('LINEAR') > -1" >
+      <label ng-if="dataLinear.length === 0" class="warn-chart-label">
+        <br/><br/><br/><br/><br/>- No expenses for the selected period -
+      </label>
       <canvas ng-if="show_categories_legend" class="chart chart-line" chart-data="dataLinear"
               chart-labels="labelsLinear" chart-series="seriesLinear" chart-legend="true"
               chart-click="onClick" >
@@ -82,15 +94,24 @@
 
     <div id="bar_chart" ng-if="graphic_type.indexOf('BAR') > -1" >
       <label class="col-sm-4">
-        <span class="input-label">Select caregories: </span>
+        <span class="input-label">Select categories: </span>
       </label>
-      <div class="form-group col-sm-4">
-        <div ng-dropdown-multiselect="" options="categoriesData" selected-model="categoriesModel" extra-settings="categoriesSettings"
+      <div class="col-sm-4">
+        <div ng-dropdown-multiselect="" options="categoriesData" selected-model="barCategoriesModel" extra-settings="categoriesSettings"
              style="width:80%;"></div>
       </div>
-      <div class="form-group col-sm-4">
-        <button type="button" class="btn btn-block accountant-btn" ng-click="applyCategoriesSelect()" style="color:white !important;">APPLY SELECT</button>
+      <div class="col-sm-1">
+        <button type="button" class="btn btn-default accountant-btn" bs-tooltip title="Apply categories selection"
+                ng-click="applyCategoriesSelect()">
+          <span class="glyphicon glyphicon-play"></span>
+        </button>
       </div>
+      <div class="col-sm-3">
+      </div>
+
+      <label ng-if="dataBar.length === 0" class="warn-chart-label">
+        <br/><br/><br/><br/><br/>- No expenses for the selected period -
+      </label>
       <canvas ng-if="show_categories_legend" class="chart chart-bar"
               chart-data="dataBar" chart-labels="labelsBar" chart-series="seriesBar" chart-legend="true">
       </canvas>
@@ -99,55 +120,27 @@
       </canvas>
     </div>
 
-    <div id="doughnut_chart" ng-if="graphic_type == 'DOUGHNUT'" >
-      <canvas ng-if="show_categories_legend" class="chart chart-doughnut"
-              chart-data="dataDoughnut" chart-labels="labelsDoughnut" chart-legend="true">
-      </canvas>
-      <canvas ng-if="!show_categories_legend" class="chart chart-doughnut"
-               chart-data="dataDoughnut" chart-labels="labelsDoughnut">
-      </canvas>
-      <br>
-      <br>
-      <div class="form-group">
-        <label class="control-label col-sm-11" style="width:100%;text-align:center;">DOUGHNUT graphic chart displays YEARLY calculation
-          for categories. For MONTHLY calculation please change to PIE or DYNAMIC graphic.
-        </label>
+    <div id="dynamic_chart" ng-if="graphic_type.indexOf('DYNAMIC') > -1">
+      <label class="col-sm-4">
+        <span class="input-label">Select categories: </span>
+      </label>
+      <div class="col-sm-4">
+        <div ng-dropdown-multiselect="" options="categoriesData" selected-model="dynamicCategoriesModel" extra-settings="categoriesSettings"
+             style="width:80%;"></div>
       </div>
-    </div>
-
-    <div id="pie_chart" ng-if="graphic_type == 'PIE'" >
-      <canvas ng-if="show_categories_legend" class="chart chart-pie"
-              chart-data="dataPie" chart-labels="labelsPie" chart-legend="true">
-      </canvas>
-      <canvas ng-if="!show_categories_legend" class="chart chart-pie"
-              chart-data="dataPie" chart-labels="labelsPie">
-      </canvas>
-      <br>
-      <br>
-      <div class="form-group">
-        <label class="control-label col-sm-11" style="width:100%;text-align:center;">PIE graphic chart displays MONTHLY calculation
-          for categories. For YEARLY calculation please change to DOUGHNUT graphic.
-        </label>
+      <div class="col-sm-1">
+        <button type="button" class="btn btn-default accountant-btn" bs-tooltip title="Apply categories selection"
+                ng-click="applyCategoriesSelect()">
+          <span class="glyphicon glyphicon-play"></span>
+        </button>
       </div>
-    </div>
-
-    <div id="polar_chart" ng-if="graphic_type == 'POLAR'" >
-      <canvas ng-if="show_categories_legend" class="chart chart-polar-area"
-              chart-data="dataPolar" chart-labels="labelsPolar" chart-legend="true">
-      </canvas>
-      <canvas ng-if="!show_categories_legend" class="chart chart-polar-area"
-              chart-data="dataPolar" chart-labels="labelsPolar">
-      </canvas>
-      <br>
-      <br>
-      <div class="form-group">
-        <label class="control-label col-sm-11" style="width:100%;text-align:center;">POLAR graphic chart displays YEARLY calculation
-          for categories. For MONTHLY calculation please change to PIE or DYNAMIC graphic.
-        </label>
+      <div class="col-sm-3">
       </div>
-    </div>
+      <br/><br/> <br/><br/>
 
-    <div id="dynamic_chart" ng-if="graphic_type == 'DYNAMIC'">
+      <label ng-if="dataDynamic.length === 0" class="warn-chart-label">
+        <br/><br/><br/>- No expenses for the selected period -
+      </label>
       <canvas ng-if="show_categories_legend" class="chart-base" chart-type="typeDynamic"
               chart-data="dataDynamic" chart-labels="labelsDynamic" chart-legend="true">
       </canvas>
@@ -155,6 +148,31 @@
               chart-data="dataDynamic" chart-labels="labelsDynamic">
       </canvas>
     </div>
+
+    <div id="pie_chart" ng-if="graphic_type.indexOf('PIE') > -1" >
+      <label ng-if="dataPie.length === 0" class="warn-chart-label">
+        <br/><br/><br/><br/><br/>- No expenses for the selected period -
+      </label>
+      <canvas ng-if="show_categories_legend" class="chart chart-pie"
+              chart-data="dataPie" chart-labels="labelsPie" chart-legend="true">
+      </canvas>
+      <canvas ng-if="!show_categories_legend" class="chart chart-pie"
+              chart-data="dataPie" chart-labels="labelsPie">
+      </canvas>
+    </div>
+
+    <div id="doughnut_chart" ng-if="graphic_type.indexOf('DOUGHNUT') > -1" >
+      <label ng-if="dataDoughnut.length === 0" class="warn-chart-label">
+        <br/><br/><br/><br/><br/>- No expenses for the selected period -
+      </label>
+      <canvas ng-if="show_categories_legend" class="chart chart-doughnut"
+              chart-data="dataDoughnut" chart-labels="labelsDoughnut" chart-legend="true">
+      </canvas>
+      <canvas ng-if="!show_categories_legend" class="chart chart-doughnut"
+               chart-data="dataDoughnut" chart-labels="labelsDoughnut">
+      </canvas>
+    </div>
+
   </div>
   <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
 
