--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -35,7 +35,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Add income</button>
+        <button type="submit" class="btn btn-default submit-btn"><span class="glyphicon glyphicon-plus"></span> Add income</button>
       </div>
     </div>
   </form>
