--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -59,7 +59,9 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Submit</button>
+        <button type="submit" class="btn btn-default submit-btn">
+          <span class="glyphicon glyphicon-circle-arrow-right"></span> Submit
+        </button>
       </div>
     </div>
   </form>
