--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -12,10 +12,11 @@
         </select>
       </div>
       <div class="col-sm-offset-2 col-sm-3">
-        <button class="btn btn-default submit-btn" ng-click="changePassword()" style="float:right;">Change password</button>
+        <button class="btn btn-default submit-btn" ng-click="changePassword()" style="float:right;">
+          <span class="glyphicon glyphicon-edit"></span> Change password
+        </button>
       </div>
     </div>
-    <br>
     <br>
     <br>
     <hr style="border-top: 1px solid #ccc;">
@@ -25,7 +26,6 @@
     </div>
     <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;">MONTHLY BUDGET</span> is <span style="font-weight: bold;color:
     {{(sumOfIncomesThisMonth-sumOfExpensesThisMonth) === 0 ? 'blue' : ((sumOfIncomesThisMonth-sumOfExpensesThisMonth) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesThisMonth - sumOfExpensesThisMonth).toFixed(2)}} {{default_currency}}'</span></span></pre>
-    <br>
     <hr style="border-top: 1px solid #ccc;">
     <div style="width:100%;text-align:center;">
       <p><span style="font-weight: bold;">YEARLY EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesThisYear.toFixed(2)}} {{default_currency}}'</span> THIS YEAR</p>
@@ -33,18 +33,55 @@
     </div>
     <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;">YEARLY BUDGET</span> is <span style="font-weight: bold;color:
     {{(sumOfIncomesThisYear-sumOfExpensesThisYear) === 0 ? 'blue' : ((sumOfIncomesThisYear-sumOfExpensesThisYear) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesThisYear - sumOfExpensesThisYear).toFixed(2) }} {{default_currency}}'</span></span></pre>
-    <br>
-    <hr style="border-top: 1px solid #ccc;">
-    <div style="width:100%;text-align:center;">
-      <p><span style="font-weight: bold;">OVERALL EXPENSES</span>: {{username}}, you've spent <span style="font-weight: bold;">'{{sumOfExpensesOverall.toFixed(2)}} {{default_currency}}'</span> OVERALL</p>
-      <p><span style="font-weight: bold;">OVERALL INCOMES</span>: {{username}}, you've received <span style="font-weight: bold;">'{{sumOfIncomesOverall.toFixed(2)}} {{default_currency}}'</span> OVERALL</p>
-    </div>
-    <pre><span style="font-size:17px;"> <span class="glyphicon glyphicon-usd"></span> Your <span style="font-weight: bold;">OVERALL BUDGET</span> is <span style="font-weight: bold;color:
-  {{(sumOfIncomesOverall-sumOfExpensesOverall) === 0 ? 'blue' : ((sumOfIncomesOverall-sumOfExpensesOverall) < 0 ? 'red' : 'green')}};"> '{{ (sumOfIncomesOverall - sumOfExpensesOverall).toFixed(2) }} {{default_currency}}'</span></span></pre>
   </div>
+  <hr style="border-top: 1px solid #ccc;">
+  <br/>
+  <label class="warn-chart-label">
+    <span class="glyphicon glyphicon-signal"></span>&nbsp;&nbsp;&nbsp;Incomes vs Expenses ({{default_currency}})
+  </label>
 
   <loading-page width="150px" message="Processing ..." ng-show="loading != 0"></loading-page>
 </div>
+
+<br/>
+<div class="form-group">
+  <label class="col-sm-4">
+    <span class="input-label">From: </span>
+    <input type="date" ng-model="chartFromDate" ng-change="onDateSelect()">
+  </label>
+  <label class="col-sm-4">
+    <span class="input-label">Until: </span>
+    <input type="date" ng-model="chartUntilDate" ng-change="onDateSelect()">
+  </label>
+  <div class="col-sm-1">
+    <span class="glyphicon glyphicon-info-sign" bs-tooltip title="Values are presented in your default currency: {{default_currency}}"></span>
+  </div>
+  <div class="col-sm-3">
+    <button type="button" class="btn btn-default" ng-click="toggleGraphicTpye()" style="width:100%">
+      <span class="glyphicon glyphicon-retweet"></span> Toggle graphic type
+    </button>
+  </div>
+</div>
+
+<div id="linear_chart" ng-if="graphic_type.indexOf('LINEAR') > -1" >
+  <label ng-if="dataLinear.length === 0" class="warn-chart-label">
+    <br/><br/><br/><br/><br/>- No data for the selected period -
+  </label>
+  <canvas class="chart chart-line" chart-data="dataLinear"
+          chart-labels="labelsLinear" chart-series="seriesLinear" chart-legend="true"
+          chart-click="onClick" >
+  </canvas>
+</div>
+
+<div id="bar_chart" ng-if="graphic_type.indexOf('BAR') > -1" >
+  <label ng-if="dataBar.length === 0" class="warn-chart-label">
+    <br/><br/><br/><br/><br/>- No expenses for the selected period -
+  </label>
+  <canvas class="chart chart-bar"
+          chart-data="dataBar" chart-labels="labelsBar" chart-series="seriesBar" chart-legend="true">
+  </canvas>
+</div>
+
 <br/>
 
 
