--- a/app/views/user/renew_forgot_password.html
+++ b/app/views/user/renew_forgot_password.html
@@ -4,13 +4,15 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">New password<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="pwd" placeholder="Enter new password ..." ng-model="forgot_obj.np" required >
+        <input type="password" class="form-control" id="pwd" placeholder="Enter new password ..." ng-model="forgot_obj.np"
+               bs-tooltip title="Password should contain at least 8 characters" required >
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Retype<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="ret_pwd" placeholder="Retype new password ..." ng-model="retyped_password" required >
+        <input type="password" class="form-control" id="ret_pwd" placeholder="Retype new password ..." ng-model="retyped_password"
+               bs-tooltip title="Password should contain at least 8 characters" required >
       </div>
     </div>
     <div class="form-group">
