--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -16,13 +16,15 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Password<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" required >
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password"
+               bs-tooltip title="Password should contain at least 8 characters" required >
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Retype<span style="color:#ff3333;">*</span> :</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="ret_pwd" placeholder="Retype password" ng-model="retyped_password" required >
+        <input type="password" class="form-control" id="ret_pwd" placeholder="Retype password" ng-model="retyped_password"
+               bs-tooltip title="Password should contain at least 8 characters" required >
       </div>
     </div>
     <div class="form-group">
