--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -28,9 +28,15 @@
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="date">Creation date:</label>
-      <div class="col-sm-10">
+      <div class="col-sm-5">
         <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
                ng-model="income.creationDate" required >
+      </div>
+      <label class="control-label col-sm-2" for="amount">Frequency:</label>
+      <div class="col-sm-3">
+        <select type="number" class="form-control" id="frequency" placeholder="Frequency" ng-model="income.frequency"
+                ng-options="frequency.value as frequency.text for frequency in availableFrequencies" required>
+        </select>
       </div>
     </div>
     <div class="form-group">
