--- a/app/views/modal/edit-expense-popup.html
+++ b/app/views/modal/edit-expense-popup.html
@@ -41,9 +41,15 @@
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="date">Creation date:</label>
-      <div class="col-sm-9">
+      <div class="col-sm-4">
         <input type="datetime-local" value="{{current_date_value}}" class="form-control" id="date" placeholder="date"
                ng-model="expense.creationDate" required >
+      </div>
+      <label class="control-label col-sm-2" for="amount">Frequency:</label>
+      <div class="col-sm-3">
+        <select type="number" class="form-control" id="frequency" placeholder="Frequency" ng-model="expense.frequency"
+                ng-options="frequency.value as frequency.text for frequency in availableFrequencies" required>
+        </select>
       </div>
     </div>
     <div class="form-group">
