Change buttons style

--- a/app/views/expense/add_expense.html
+++ b/app/views/expense/add_expense.html
@@ -53,9 +53,10 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn"><span class="glyphicon glyphicon-plus"></span> Add expense</button>
+      <div class="col-sm-offset-2 col-sm-3">
+        <button type="submit" class="btn accountant-btn"><span class="glyphicon glyphicon-plus"></span> Add expense</button>
       </div>
+      <div class="col-sm-7"></div>
     </div>
   </form>
   <loading-page width="150px" message="Processing ..." ng-show="loading == true"></loading-page>
