--- a/app/views/expense/expense_categories.html
+++ b/app/views/expense/expense_categories.html
@@ -7,23 +7,23 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="date">Colour:</label>
       <div class="col-sm-3">
-        <select class="form-control" ng-model="newCategory.colour">
-          <option selected style="background-color: white" class="light">light</option>
-          <option style="background-color: cornsilk" class="stable">stable</option>
-          <option style="background-color: DodgerBlue " class="positive">positive</option>
-          <option style="background-color: aqua" class="calm">calm</option>
-          <option style="background-color: YellowGreen" class="balanced">balanced</option>
-          <option style="background-color: Gold" class="energized">energized</option>
-          <option style="background-color: Crimson " class="assertive">assertive</option>
-          <option style="background-color: BlueViolet " class="royal">royal</option>
-          <option style="background-color: black" class="dark">dark</option>
+        <select class="form-control" ng-model="newCategory.colour" ng-style="{'background-color': colours_map[newCategory.colour]}">
+          <option selected style="background-color: white" class="light" value="light">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: cornsilk" class="stable" value="stable">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: DodgerBlue " class="positive" value="positive">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: aqua" class="calm" value="calm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: YellowGreen" class="balanced" value="balanced">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: Gold" class="energized" value="energized">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: Crimson " class="assertive" value="assertive">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: BlueViolet " class="royal" value="royal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+          <option style="background-color: black" class="dark" value="dark">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
         </select>
       </div>
       <div class="col-sm-4">
         <input type="text" class="form-control" placeholder="New category name" ng-model="newCategory.name">
       </div>
-      <div class="col-sm-2">
-        <button type="submit" class="btn btn-default submit-btn" ng-click="addCategory()">
+      <div class="col-sm-3">
+        <button type="submit" class="btn accountant-btn" ng-click="addCategory()">
           <span class="glyphicon glyphicon-plus"></span> Add category
         </button>
       </div>
