--- a/app/views/modal/edit-income-popup.html
+++ b/app/views/modal/edit-income-popup.html
@@ -40,10 +40,14 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-2">
-        <button type="submit" class="btn btn-default submit-btn">Save</button>
+        <button type="submit" class="btn btn-success submit-btn">
+          <span class="glyphicon glyphicon-pencil"></span> Save
+        </button>
       </div>
       <div class="col-sm-7">
-        <button type="button" ng-click="cancel()" class="btn btn-default submit-btn">Cancel</button>
+        <button type="button" ng-click="cancel()" class="btn btn-danger submit-btn">
+          <span class="glyphicon glyphicon-remove"></span> Cancel
+        </button>
       </div>
     </div>
   </form>
