--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -12,7 +12,7 @@
         </select>
       </div>
       <div class="col-sm-offset-2 col-sm-3">
-        <button class="btn btn-default submit-btn" ng-click="changePassword()" style="float:right;">
+        <button class="btn accountant-btn" ng-click="changePassword()" style="float:right;">
           <span class="glyphicon glyphicon-edit"></span> Change password
         </button>
       </div>
@@ -57,7 +57,7 @@
     <span class="glyphicon glyphicon-info-sign" bs-tooltip title="Values are presented in your default currency: {{default_currency}}"></span>
   </div>
   <div class="col-sm-3">
-    <button type="button" class="btn btn-default" ng-click="toggleGraphicTpye()" style="width:100%">
+    <button type="button" class="btn accountant-btn" ng-click="toggleGraphicTpye()">
       <span class="glyphicon glyphicon-retweet"></span> Toggle graphic type
     </button>
   </div>
