--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -149,7 +149,8 @@ body {
 
   .accountant-btn {
     background-color: #222;
-    color: #9d9d9d;
+    color: #9d9d9d !important;
+    width: 100%;
   }
   button.accountant-btn:hover {
       color:#ffffff !important;
