--- a/app/views/income/add_income.html
+++ b/app/views/income/add_income.html
@@ -40,9 +40,10 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn"><span class="glyphicon glyphicon-plus"></span> Add income</button>
+      <div class="col-sm-offset-2 col-sm-3">
+        <button type="submit" class="btn accountant-btn"><span class="glyphicon glyphicon-plus"></span> Add income</button>
       </div>
+      <div class="col-sm-7"></div>
     </div>
   </form>
 
