--- a/app/views/user/renew_forgot_password.html
+++ b/app/views/user/renew_forgot_password.html
@@ -22,9 +22,12 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">Submit</button>
+      <div class="col-sm-offset-2 col-sm-3">
+        <button type="submit" class="btn accountant-btn submit-btn">
+          <span class="glyphicon glyphicon-circle-arrow-right"></span> Submit
+        </button>
       </div>
+      <div class="col-sm-7"></div>
     </div>
   </form>
 
