--- a/app/views/user/sign_up.html
+++ b/app/views/user/sign_up.html
@@ -2,69 +2,70 @@
   <h2 style="text-align:center;"><img src="images/sign-up.png"> SIGN UP FORM</h2>
   <form class="form-horizontal" role="form" ng-submit="submit()" ng-show="loading == false">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Email<span style="color:#ff3333;">*</span> :</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="email">Email<span style="color:#ff3333;">*</span> :</label>
+      <div class="col-sm-9">
         <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="user.email" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="username">Username<span style="color:#ff3333;">*</span> :</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="username">Username<span style="color:#ff3333;">*</span> :</label>
+      <div class="col-sm-9">
         <input type="text" class="form-control" id="username" placeholder="Enter username" ng-model="user.username" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Password<span style="color:#ff3333;">*</span> :</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="pwd">Password<span style="color:#ff3333;">*</span> :</label>
+      <div class="col-sm-9">
         <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password"
                bs-tooltip title="Password should contain at least 8 characters" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Retype<span style="color:#ff3333;">*</span> :</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="pwd">Retype<span style="color:#ff3333;">*</span> :</label>
+      <div class="col-sm-9">
         <input type="password" class="form-control" id="ret_pwd" placeholder="Retype password" ng-model="retyped_password"
                bs-tooltip title="Password should contain at least 8 characters" required >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="DefaultCurrency">Default currency<span style="color:#ff3333;">*</span> :</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="DefaultCurrency">Default currency<span style="color:#ff3333;">*</span> :</label>
+      <div class="col-sm-9">
         <select type="date" class="form-control" id="DefaultCurrency" placeholder="Default Currency ..." ng-model="user.defaultCurrency" required>
           <option ng-repeat="currency in availableCurrencies" value="{{currency}}">{{currency}}</option>
         </select>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="firstName">First name:</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="firstName">First name:</label>
+      <div class="col-sm-9">
         <input type="text" class="form-control" id="firstName" placeholder="First name" ng-model="user.firstName">
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="surname">Last name:</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="surname">Last name:</label>
+      <div class="col-sm-9">
         <input type="text" class="form-control" id="surname" placeholder="Last name" ng-model="user.surname">
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="birthdate">Birthdate:</label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="birthdate">Birthdate:</label>
+      <div class="col-sm-9">
         <input type="date" class="form-control" id="birthdate" placeholder="Birthdate" ng-model="user.birthdate" >
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="birthdate"> </label>
-      <div class="col-sm-10">
+      <label class="control-label col-sm-3" for="birthdate"> </label>
+      <div class="col-sm-9">
         <span style="color:#ff3333;">* Required field</span>
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default submit-btn">
+      <div class="col-sm-offset-3 col-sm-3">
+        <button type="submit" class="btn accountant-btn">
           <span class="glyphicon glyphicon-circle-arrow-right"></span> Submit
         </button>
       </div>
+      <div class="col-sm-6"></div>
     </div>
   </form>
 
